gl31-master/src/test/deca/syntax/valid/complet/meth_appel.deca
// Description:
//    tests de programme correct syntaxiquement pour complet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 20/01/2021
class Test{
    void methodeTest(int param1, float param2){
        print(param1,param2);
    }
}
{
    Test t = new Test();
    t.methodeTest(1,3.0e4f);
}
