gl31-master/src/test/deca/syntax/invalid/complet/meth_appel.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 16: Erreur, ')' manquant
//
// Historique:
//    cree le 20/01/2021
class Test{
    void methodeTest(int param1, float param2){
        print(param1,param2);
    }
}
{
    Test t = new Test();
    t.methodeTest(1,3.0e4f;
}
